--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.27.2"
+    "@prisma/client": "^3.14.0",
+    "axios": "^0.27.2",
+    "prisma": "^3.14.0"
   }
 }
